--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,32 +1,47 @@
-# Base image
-FROM php:7.4-apache
+# Start with a base image
+FROM php:7.4-fpm
 
-# Set the working directory
+# Set the working directory in the container
 WORKDIR /var/www/html
 
-# Install dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
+    build-essential \
+    libonig-dev \
+    libcurl4-openssl-dev \
+    libpng-dev \
+    libjpeg-dev \
     libzip-dev \
+    zip \
     unzip \
-    && docker-php-ext-install zip
+    git
 
-# Copy project files
-COPY . .
-
-# Set file permissions
-RUN chown -R www-data:www-data /var/www/html/storage
+# Install PHP extensions
+RUN docker-php-ext-install pdo pdo_mysql mbstring exif pcntl bcmath gd zip
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Install dependencies with Composer
-RUN composer install --no-dev --no-scripts --no-progress
+# Copy the composer.json and composer.lock files
+COPY composer.json composer.lock ./
 
-# Set Apache configuration
-RUN a2enmod rewrite
+# Install project dependencies
+RUN composer install --no-scripts --no-autoloader
 
-# Expose port 80
-EXPOSE 80
+# Copy the rest of the application code
+COPY . .
 
-# Start Apache server
-CMD ["apache2-foreground"]
+# Generate the autoloader
+RUN composer dump-autoload --optimize
+
+# Set permissions for Laravel
+RUN chown -R www-data:www-data storage bootstrap/cache
+
+# Generate an application key
+RUN php artisan key:generate
+
+# Expose the port that the web server will listen on
+EXPOSE 9000
+
+# Start the PHP-FPM service
+CMD ["php-fpm"]
