--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:b36Uuuq7CZ5twZlOutS1lMH0kuCCGYOMK9ueqL7jGZg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,29 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# For docker-compose up
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=backend
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=team_challenge
+DB_USERNAME=master
+DB_PASSWORD=123
+
+# For terminal
+# DB_CONNECTION=mysql
+# DB_HOST=localhost
+# DB_PORT=3307
+# DB_DATABASE=team_challenge
+# DB_USERNAME=master
+# DB_PASSWORD=123
+
+# For Laravel app
+# DB_CONNECTION=mysql
+# DB_HOST=db
+# DB_PORT=3306
+# DB_DATABASE=team_challenge
+# DB_USERNAME=master
+# DB_PASSWORD=123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
