--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,7 @@
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start --poll=2000",
+    "start": "react-scripts start --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
