--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,11 +8,15 @@
     "bootstrap": "5.2.3",
     "bootstrap-icons": "1.10.3",
     "loader-utils": "3.2.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
-    "react-router-dom": "6.10.0",
-    "react-scripts": "5.0.1"
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
@@ -25,7 +29,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  
   "browserslist": [
     ">0.2%",
     "not dead",
