--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,11 +46,24 @@ services:
     - './Frontend:/fe'
     - '/fe/node_modules'
     environment:
+      - HTTPS=true
       - NODE_ENV=development
       - CHOKIDAR_USEPOLLING=true   # Enable polling for file changes
     networks:
       - laravel-exa
 
+  nginx:
+    image: nginx:latest
+    container_name: Nginx
+    ports:
+      - '443:443'
+    volumes:
+      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./docker/nginx/ssl:/etc/nginx/ssl
+    depends_on:
+      - main
+    networks:
+      - laravel-exa
 
 networks:
   laravel-exa:
