--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name 192.168.43.44;
+    server_name ip_of_the_ec2_instance;
 
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
