Unsupported SSL request to backend

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,16 +41,16 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       # For development:
-      # - '0.0.0.0:3000:3000'
-      # For production:
-        - '0.0.0.0:3000:80'
+      - '0.0.0.0:3000:3000'
+      # # For production:
+      #   - '0.0.0.0:3000:80'
     command: 'yarn start --host 0.0.0.0'
     volumes:
       # For development:
-    # - './Frontend:/fe'
-    # - '/fe/node_modules'
-      # For production:
-      - './Frontend/build:/usr/share/nginx/html'
+    - './Frontend:/fe'
+    - '/fe/node_modules'
+      # # For production:
+      # - './Frontend/build:/usr/share/nginx/html'
     environment:
       - HTTPS=true
       - NODE_ENV=development
@@ -68,8 +68,8 @@ services:
       - ./docker/nginx/ssl:/etc/nginx/ssl
     depends_on:
       - main
-      # Producion:
-      - fe
+      # # Producion:
+      # - fe
     networks:
       - laravel-exa
 
