--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: 'php artisan serve --host=0.0.0.0 --port=8000'
+    command: 'php artisan serve --host=0.0.0.0 --port=443'
     volumes:
       - .:/app
     ports:
       - 8000:8000
+    networks:
+      - laravel-exa
 
   queue:
     container_name: Queue
@@ -46,15 +48,15 @@ services:
       #   - '0.0.0.0:3000:80'
     command: 'yarn start --host 0.0.0.0'
     volumes:
-      # For development:
-    - './Frontend:/fe'
-    - '/fe/node_modules'
-      # # For production:
-      # - './Frontend/build:/usr/share/nginx/html'
+    #   # For development:
+    # - './frontend:/fe'
+    # - '/fe/node_modules'
+      # For production:
+      - './frontend/build:/usr/share/nginx/html'
     environment:
-      - HTTPS=true
+      # - HTTPS=true
       - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true   # Enable polling for file changes
+      # - CHOKIDAR_USEPOLLING=true   # Enable polling for file changes
     networks:
       - laravel-exa
 
@@ -64,12 +66,13 @@ services:
     ports:
       - '443:443'
     volumes:
-      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./docker/nginx/ssl:/etc/nginx/ssl
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:rw
+      - ./nginx/ssl:/etc/nginx/ssl
+      # For production:
+      - './frontend/build:/usr/share/nginx/html'
     depends_on:
       - main
-      # # Producion:
-      # - fe
+      - fe
     networks:
       - laravel-exa
 
