--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,15 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: 'php artisan serve --host=0.0.0.0 --port=443'
+    # command: 'php artisan serve --host=0.0.0.0 --port=443'
+    working_dir: /var/www
     volumes:
-      - .:/app
+      - ./:/var/www
+      #  - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     ports:
       - 8000:8000
     networks:
-      - laravel-exa
+      - laravel-network
 
   queue:
     container_name: Queue
@@ -37,28 +39,28 @@ services:
     ports:
       - 3306:3306
 
-  fe:
-    build:
-      context: Frontend
-      dockerfile: Dockerfile.dev
-    ports:
-      # For development:
-      - '0.0.0.0:3000:3000'
-      # # For production:
-      #   - '0.0.0.0:3000:80'
-    command: 'yarn start --host 0.0.0.0'
-    volumes:
-    #   # For development:
-    # - './frontend:/fe'
-    # - '/fe/node_modules'
-      # For production:
-      - './frontend/build:/usr/share/nginx/html'
-    environment:
-      # - HTTPS=true
-      - NODE_ENV=development
-      # - CHOKIDAR_USEPOLLING=true   # Enable polling for file changes
-    networks:
-      - laravel-exa
+  # fe:
+  #   build:
+  #     context: Frontend
+  #     dockerfile: Dockerfile.dev
+  #   ports:
+  #     # For development:
+  #     - '0.0.0.0:3000:3000'
+  #     # # For production:
+  #     #   - '0.0.0.0:3000:80'
+  #   command: 'yarn start --host 0.0.0.0'
+  #   volumes:
+  #   #   # For development:
+  #   # - './frontend:/fe'
+  #   # - '/fe/node_modules'
+  #     # For production:
+  #     - './frontend/build:/usr/share/nginx/html'
+  #   environment:
+  #     # - HTTPS=true
+  #     - NODE_ENV=development
+  #     # - CHOKIDAR_USEPOLLING=true   # Enable polling for file changes
+  #   networks:
+  #     - laravel-network
 
   nginx:
     image: nginx:latest
@@ -66,18 +68,19 @@ services:
     ports:
       - '443:443'
     volumes:
+      - ./:/var/www
       - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:rw
       - ./nginx/ssl:/etc/nginx/ssl
       # For production:
       - './frontend/build:/usr/share/nginx/html'
     depends_on:
       - main
-      - fe
+      # - fe
     networks:
-      - laravel-exa
+      - laravel-network
 
 networks:
-  laravel-exa:
+  laravel-network:
     driver: bridge
 
 volumes:
