--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,26 +1,34 @@
 server {
     listen *:80;
     listen 443 default ssl;
+    index index.php index.html;
     server_name 192.168.43.44;
 
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
 
+    # location / {
+    #     proxy_pass http://fe:3000;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    # }
+
     location / {
-        proxy_pass http://fe:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
     }
 
     location /api {
-        proxy_pass http://0.0.0.0:443;
+        proxy_pass http://0.0.0.0:8000;
         proxy_redirect off;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        # try_files $uri $uri/ /index.php?$query_string;
+        # gzip_static on;
     }
 
 }
