--- a/nginx/conf.d/default.conf.template
+++ b/nginx/conf.d/default.conf.template
@@ -1,15 +1,18 @@
 server {
-    listen 443 ssl;
-    server_name ip_of_the_ec2_instance;
+    listen 443 default ssl;
+    index index.php index.html;
+    server_name 192.168.43.44;
 
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
 
     location / {
-        proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
     }
+
+    location / {
+        try_files $uri $uri/ /var/www/public/index.php?$query_string;
+    }
+
 }
