--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: 'php artisan serve --host=0.0.0.0 --port=443'
+    # command: 'php artisan serve --host=0.0.0.0 --port=443'
     working_dir: /var/www
     volumes:
       - ./:/var/www
