--- a/nginx/conf.d/default.conf.template
+++ b/nginx/conf.d/default.conf.template
@@ -1,18 +1,14 @@
 server {
     listen 443 default ssl;
     index index.php index.html;
-    server_name 192.168.43.44;
+    server_name your_ip_address;
 
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    location / {
+    location /api {
         try_files $uri $uri/ /var/www/public/index.php?$query_string;
     }
 
 }
+
