--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,12 +2,18 @@ server {
     listen 443 default ssl;
     index index.php index.html;
     server_name 192.168.43.44;
+    error_log /var/log/nginx/error.log debug;
 
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
 
+    # Laravel files
     location /api {
         try_files $uri $uri/ /var/www/public/index.php?$query_string;
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
 }
