--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,65 +1,65 @@
 version: '3.8'
 
 services:
-  main:
-    container_name: Serve
-    build:
-      context: .
-      dockerfile: Dockerfile
-    working_dir: /var/www
-    volumes:
-      - ./:/var/www
-    ports:
-      - 8000:8000
-    networks:
-      - laravel-network
+  # main:
+  #   container_name: Serve
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   working_dir: /var/www
+  #   volumes:
+  #     - ./:/var/www
+  #   ports:
+  #     - 8000:8000
+  #   networks:
+  #     - laravel-network
 
-  queue:
-    container_name: Queue
-    build:
-      context: .
-      dockerfile: Dockerfile
-    command: 'php artisan queue:work'
-    depends_on:
-      - db
-    networks:
-      - laravel-network
+  # queue:
+  #   container_name: Queue
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   command: 'php artisan queue:work'
+  #   depends_on:
+  #     - db
+  #   networks:
+  #     - laravel-network
 
-  db:
-    platform: linux/x86_64
-    image: mysql:8.0
-    container_name: Database
-    environment:
-      MYSQL_DATABASE: "${DB_DATABASE}"
-      MYSQL_USER: "${DB_USERNAME}"
-      MYSQL_ROOT: "root"
-      MYSQL_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-    volumes:
-      - db:/var/lib/mysql
-    ports:
-      - 3306:3306
-    networks:
-      - laravel-network
+  # db:
+  #   platform: linux/x86_64
+  #   image: mysql:8.0
+  #   container_name: Database
+  #   environment:
+  #     MYSQL_DATABASE: "${DB_DATABASE}"
+  #     MYSQL_USER: "${DB_USERNAME}"
+  #     MYSQL_ROOT: "root"
+  #     MYSQL_PASSWORD: "${DB_PASSWORD}"
+  #     MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+  #   volumes:
+  #     - db:/var/lib/mysql
+  #   ports:
+  #     - 3306:3306
+  #   networks:
+  #     - laravel-network
 
   nginx:
     image: nginx:latest
     container_name: Nginx
     ports:
-      - '443:443'
+      - '80:80'
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./frontend/build:/usr/share/nginx/html
-    depends_on:
-      - main
-    networks:
-      - laravel-network
+    # depends_on:
+    #   - main
+    # networks:
+    #   - laravel-network
 
-networks:
-  laravel-network:
-    driver: bridge
+# networks:
+#   laravel-network:
+#     driver: bridge
 
-volumes:
-  db:
-    driver: local
+# volumes:
+#   db:
+#     driver: local
