--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,19 +1,21 @@
 server {
-    listen 443 default ssl;
-    index index.php index.html;
-    server_name 192.168.43.44;
+    # listen 443 default ssl;
+    listen 80 default;
+    index index.html;
+    server_name 192.168.8.112;
     error_log /var/log/nginx/error.log debug;
 
-    ssl_certificate /etc/nginx/ssl/server.crt;
-    ssl_certificate_key /etc/nginx/ssl/server.key;
+    # ssl_certificate /etc/nginx/ssl/server.crt;
+    # ssl_certificate_key /etc/nginx/ssl/server.key;
 
     # Laravel files
-    location /api {
-        try_files $uri $uri/ /var/www/public/index.php?$query_string;
-    }
+    # location /api {
+    #     try_files $uri $uri/ /var/www/public/index.php?$query_string;
+    # }
 
+    # React build files
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /usr/share/nginx/html/index.html;
     }
 
 }
