--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,21 +1,21 @@
 server {
-    # listen 443 default ssl;
     listen 80 default;
-    index index.html;
     server_name 192.168.8.112;
-    error_log /var/log/nginx/error.log debug;
 
-    # ssl_certificate /etc/nginx/ssl/server.crt;
-    # ssl_certificate_key /etc/nginx/ssl/server.key;
+    root /usr/share/nginx/html;
+    index index.html;
 
-    # Laravel files
-    # location /api {
-    #     try_files $uri $uri/ /var/www/public/index.php?$query_string;
-    # }
-
-    # React build files
     location / {
-        try_files $uri $uri/ /usr/share/nginx/html/index.html;
+        try_files $uri /index.html;
     }
 
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+    }
+
+    location ~* \.(?:css|js|map|png|jpg|jpeg|gif|ico|svg)$ {
+        expires max;
+        add_header Cache-Control "public, immutable";
+    }
 }
