--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,11 @@
 server {
-    listen 80 default;
+    listen 443 default ssl;
+    index index.html;
     server_name 192.168.8.112;
+    error_log /var/log/nginx/error.log debug;
+
+    ssl_certificate /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
 
     root /usr/share/nginx/html;
     index index.html;
