React and Laravel available via local network

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,11 +2,12 @@ server {
     listen 80 default;
     server_name 192.168.8.112;
 
-    root /usr/share/nginx/html;
-    index index.html;
+    root /var/www/public;  # Adjust the path to Laravel's public directory
+
+    index index.php index.html index.htm;
 
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location = /favicon.ico {
@@ -17,5 +18,15 @@ server {
     location ~* \.(?:css|js|map|png|jpg|jpeg|gif|ico|svg)$ {
         expires max;
         add_header Cache-Control "public, immutable";
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass main:9000;  # Assuming your Laravel PHP-FPM container is named "main"
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
