--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,12 +1,19 @@
 server {
-    listen 80 default;
+    listen 443 ssl;
     server_name 192.168.8.112;
 
-    root /var/www/public;  # Adjust the path to Laravel's public directory
-
-    index index.php index.html index.htm;
+    ssl_certificate /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
 
     location / {
+        root /usr/share/nginx/html;  # Path to React build
+        index index.html;
+        try_files $uri /index.html;
+    }
+
+    location /api {
+        root /var/www/public;  # Adjust the path to Laravel's public directory
+        index index.php index.html index.htm;
         try_files $uri $uri/ /index.php?$query_string;
     }
 
