--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -5,16 +5,27 @@ server {
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
 
-    location / {
-        root /usr/share/nginx/html;  # Path to React build
-        index index.html;
-        try_files $uri /index.html;
+    location /api/ {
+        alias /var/www/public/;  # Use alias instead of root for Laravel
+        try_files $uri $uri/ @laravel;
     }
 
-    location /api {
-        root /var/www/public;  # Adjust the path to Laravel's public directory
-        index index.php index.html index.htm;
-        try_files $uri $uri/ /index.php?$query_string;
+    location @laravel {
+        rewrite /api/(.*)$ /api/index.php?$1 last;
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass main:9000;  # Assuming your Laravel PHP-FPM container is named "main"
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param REQUEST_URI $request_uri;  # Add this line to fix Laravel routing
+        internal;
+    }
+
+    location / {
+        root /etc/nginx/html;
+        index index.html;
+        try_files $uri /index.html;
     }
 
     location = /favicon.ico {
@@ -25,15 +36,5 @@ server {
     location ~* \.(?:css|js|map|png|jpg|jpeg|gif|ico|svg)$ {
         expires max;
         add_header Cache-Control "public, immutable";
-    }
-
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass main:9000;  # Assuming your Laravel PHP-FPM container is named "main"
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
-    location ~ /\.ht {
-        deny all;
     }
 }
