--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:b36Uuuq7CZ5twZlOutS1lMH0kuCCGYOMK9ueqL7jGZg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://localhost
 
 
 LOG_CHANNEL=stack
@@ -10,7 +10,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=team_challenge
 DB_USERNAME=master
