--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
+laravel/node_modules
+laravel/vendor
+nginx/conf.d/default.conf
+nginx/ssl
+react/build/
 react/node_modules/
 react/src/urls.json
-react/build/
-react/public/build
 .env
-/.phpunit.cache
-laravel/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-laravel/vendor
-.env
-nginx/conf.d/default.conf
-nginx/
