--- a/laravel/Dockerfile
+++ b/laravel/Dockerfile
@@ -7,7 +7,7 @@ RUN docker-php-ext-install pdo_mysql
 WORKDIR /var/www/html
 
 # Copy the Laravel application files to the container
-COPY ./laravel .
+COPY . .
 
 # Install Composer and dependencies
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
