--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -42,44 +42,25 @@ services:
 
   nginx:
     container_name: nginx
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
+    # build:
+    #   context: ./nginx
+    #   dockerfile: Dockerfile
+    image: nginx:latest
     volumes:
       # Mount SSL certificate for HTTPS
       # - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./react/build:/etc/nginx/html
-    # command: sh -c "mkdir -p /etc/nginx/ssl && \
-    #          openssl genrsa -des3 -passout pass:x -out /etc/nginx/ssl/server.pass.key 2048 && \
-    #          openssl rsa -passin pass:x -in /etc/nginx/ssl/server.pass.key -out /etc/nginx/ssl/server.key && \
-    #          rm /etc/nginx/ssl/server.pass.key && \
-    #          openssl req -new -key /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.csr -subj '/C=UK/ST=Warwickshire/L=Leamington/O=OrgName/OU=IT Department/CN=172.20.0.1' && \
-    #          openssl x509 -req -days 365 -in /etc/nginx/ssl/server.csr -signkey /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.crt"
+      # - ./react/build:/etc/nginx/html
     depends_on:
       - laravel
-      # - react-dev
       - react-prod
     networks:
       - laravel-network
 
-  # react-dev:  # Development service
-  #   build:
-  #     context: react
-  #     dockerfile: Dockerfile.dev
-  #   ports:
-  #     - '3000:3000'
-  #   volumes:
-  #     - './react:/app'
-  #     - '/app/node_modules'
-  #   environment:
-  #     - NODE_ENV=development
-  #   networks:
-  #     - laravel-network
-
   react-prod:  # Production service
+    container_name: react-prod
     build:
-      context: react
+      context: ./react
       dockerfile: Dockerfile.prod
     ports:
       - '80:80'
