--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
       # Mount SSL certificate for HTTPS
       # - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./react/build:/etc/nginx/html
+      # - ./react/build:/etc/nginx/html
     # command: sh -c "mkdir -p /etc/nginx/ssl && \
     #          openssl genrsa -des3 -passout pass:x -out /etc/nginx/ssl/server.pass.key 2048 && \
     #          openssl rsa -passin pass:x -in /etc/nginx/ssl/server.pass.key -out /etc/nginx/ssl/server.key && \
