--- a/react/Dockerfile.prod
+++ b/react/Dockerfile.prod
@@ -10,7 +10,7 @@ RUN mkdir -p /etc/nginx/ssl && \
   openssl genrsa -des3 -passout pass:x -out /etc/nginx/ssl/server.pass.key 2048 && \
   openssl rsa -passin pass:x -in /etc/nginx/ssl/server.pass.key -out /etc/nginx/ssl/server.key && \
   rm /etc/nginx/ssl/server.pass.key && \
-  openssl req -new -key /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.csr -subj '/C=UK/ST=Warwickshire/L=Leamington/O=OrgName/OU=IT Department/CN=127.0.0.1' && \
+  openssl req -new -key /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.csr -subj '/C=UK/ST=Warwickshire/L=Leamington/O=OrgName/OU=IT Department/CN=192.168.43.44' && \
   openssl x509 -req -days 365 -in /etc/nginx/ssl/server.csr -signkey /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.crt
 
 # Cache and Install dependencies
@@ -27,10 +27,11 @@ FROM nginx:1.21.0-alpine as production
 ENV NODE_ENV production
 
 # Copy built assets from builder
-COPY --from=builder /react/build /etc/nginx/html
+COPY --from=builder /react/build /react_build
 
 # # Add your nginx.conf
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /etc/nginx/ssl /etc/nginx/ssl
+COPY ./conf.d/default.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
 EXPOSE 80
