--- a/react/Dockerfile.prod
+++ b/react/Dockerfile.prod
@@ -27,14 +27,14 @@ FROM nginx:1.21.0-alpine as production
 ENV NODE_ENV production
 
 # Copy built assets from builder
-COPY --from=builder /react/build/. /etc/nginx/html
+COPY --from=builder /react/build/. /var/www/html/team_challenge/react/build
 
 # # Add your nginx.conf
 COPY --from=builder /etc/nginx/ssl /etc/nginx/ssl
 COPY ./conf.d/default.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
-EXPOSE 443
+# EXPOSE 443
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
