--- a/react/Dockerfile.prod
+++ b/react/Dockerfile.prod
@@ -1,8 +1,6 @@
 FROM node:14-alpine AS builder
 ENV NODE_ENV production
 
-WORKDIR /react
-
 RUN apk add --no-cache openssl
 
 # Generate SSL certificates
@@ -27,14 +25,11 @@ FROM nginx:1.21.0-alpine as production
 ENV NODE_ENV production
 
 # Copy built assets from builder
-COPY --from=builder /react/build/. /var/www/html/team_challenge/react/build
+COPY --from=builder /build/. /var/www/html/public
 
 # # Add your nginx.conf
 COPY --from=builder /etc/nginx/ssl /etc/nginx/ssl
 COPY ./conf.d/default.conf /etc/nginx/conf.d/default.conf
-
-# Expose port
-# EXPOSE 443
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
