--- a/react/conf.d/default.conf
+++ b/react/conf.d/default.conf
@@ -21,4 +21,9 @@ server {
     fastcgi_pass laravel:9000;
     fastcgi_index index.php;
   }
+
+  location / {
+    index index.html;
+    try_files $uri /index.html;
+  }
 }
