--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -23,7 +23,7 @@ services:
   db:
     platform: linux/x86_64
     image: mysql:8.0
-    container_name: database
+    container_name: db
     environment:
       MYSQL_DATABASE: team_challenge
       MYSQL_USER: master
