--- a/nginx/conf.d/default_dev.conf
+++ b/nginx/conf.d/default_dev.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl;
-  server_name your_ipd_address:1443; # Enter your IPv4 Address here
+  server_name your_ipd_address:9999;
 
   error_log /var/log/nginx/error.log debug;
   access_log /var/log/nginx/access.log;
@@ -17,13 +17,8 @@ server {
   location ~ \.php$ {
     include fastcgi_params;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    # Pass the PHP requests to FastCGI server (php-fpm service in the `laravel` container)
-    fastcgi_pass laravel:9000;
+    # Pass the PHP requests to FastCGI server (php-fpm service in the `laravel-dev` container)
+    fastcgi_pass laravel-dev:9000;
     fastcgi_index index.php;
-  }
-
-  location / {
-    index index.html;
-    try_files $uri /index.html;
   }
 }
