--- a/react/Dockerfile.prod
+++ b/react/Dockerfile.prod
@@ -8,13 +8,13 @@ RUN mkdir -p /etc/nginx/ssl && \
   openssl genrsa -des3 -passout pass:x -out /etc/nginx/ssl/server.pass.key 2048 && \
   openssl rsa -passin pass:x -in /etc/nginx/ssl/server.pass.key -out /etc/nginx/ssl/server.key && \
   rm /etc/nginx/ssl/server.pass.key && \
-  openssl req -new -key /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.csr -subj '/C=LV/ST=Riga/L=Riga/O=OrgName/OU=IT Department/CN=192.168.111.243' && \
+  openssl req -new -key /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.csr -subj '/C=LV/ST=Riga/L=Riga/O=OrgName/OU=IT Department/CN=your_ipd_address' && \
   openssl x509 -req -days 365 -in /etc/nginx/ssl/server.csr -signkey /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.crt
 
 # Cache and Install dependencies
 COPY package.json .
 COPY package-lock.json .
-RUN npm i
+RUN npm i --frozen-lockfile
 
 COPY . .
 
@@ -27,7 +27,7 @@ ENV NODE_ENV production
 # Copy built assets from builder
 COPY --from=builder /build/. /var/www/html/public
 
-# # Add your nginx.conf
+# Add your nginx.conf
 COPY --from=builder /etc/nginx/ssl /etc/nginx/ssl
 COPY ./conf.d/default.conf /etc/nginx/conf.d/default.conf
 
