--- a/react/conf.d/default.conf
+++ b/react/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl;
-  server_name your_ipd_address:1443; # Enter your IPv4 Address here
+  server_name 127.0.0.1:1443; # Enter your IPv4 Address here
 
   error_log /var/log/nginx/error.log debug;
   access_log /var/log/nginx/access.log;
