--- a/nginx/conf.d/default_dev.conf
+++ b/nginx/conf.d/default_dev.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl;
-  server_name your_ipd_address:9999;
+  server_name 127.0.0.1:9999;
 
   error_log /var/log/nginx/error.log debug;
   access_log /var/log/nginx/access.log;
